Adding unit tests and Cleanup

--- a/src/app/farm-details/farm-details.component.html
+++ b/src/app/farm-details/farm-details.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <!-- Details -->
   <h3 class="text-center">Farm Details</h3>
   <div class="row">
     <table class="table table-striped">
@@ -50,6 +51,7 @@
       </tbody>
     </table>
   </div>
+  <!-- Button for edit farm -->
   <div class="mt-2 d-flex justify-content-center">
     <a class="btn btn-primary mr-4" [routerLink]="['/home']" role="button">Back to List</a>
     <button class="btn btn-success" (click)="editFarm()">Edit Farm</button>
