--- a/src/app/paddock/paddock.component.html
+++ b/src/app/paddock/paddock.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <!-- Buttton to remove the paddock -->
   <div class="form-row justify-content-end">
     <button class="btn btn-link" type="button" (click)="removePaddock()">
       <span class="text-danger">
